kubernetes/overlays/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: axiomnode-ingress
  labels:
    app.kubernetes.io/part-of: axiomnode
spec:
  entryPoints:
    - web
    - websecure
  routes:
    # Public backoffice frontend (via Nginx Proxy Manager)
    - match: Host(`axiomnode-backoffice.amksandbox.cloud`)
      kind: Rule
      services:
        - name: backoffice
          port: 80

    # Public mobile API entry (used by mobile app)
    - match: Host(`axiomnode-bff-mobile.amksandbox.cloud`)
      kind: Rule
      services:
        - name: bff-mobile
          port: 7010
